--- a/index.html
+++ b/index.html
@@ -1,30 +1,57 @@
-<!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>ProjetWeb</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Spotify Search</title>
+  <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script type="text/javascript" src="jquery-1.10.1.min.js"></script>
+  <script type="text/javascript" src='search.js'></script>
 </head>
-<div class="main inactive">
-   <div class="bg-main"></div>
-   <section class="search">
-     <div class="search-box">
-       <div class="introduction-text">
-        <h1>Search over 200 million songs.</h1>
-        <p>Know what you want to listen to? Just search and hit play.</p>
-      </div>
-      <div class="cancel"></div>
-      <form class="search-form">
-        <div class="query-box">
-          <input class="query-input" type="text" autocomplete="off" name="search" placeholder="e.g. 'foals', 'queen'">
-          <div id="results">
+
+<body>
+  <div class="container">
+    <div class="row header-padding">
+      <h1>Spotify Search</h1>
+      <p>Type a song name and click on "Search". 
+        <br>Then, click on any picture from the results to play 30 seconds preview
+        <br>To search more in detail, click "Advanced"</p>
+      <form id="search-form" class="search-row">
+        <div class="input-group">
+          <span class="input-group-btn">
+            <input type="button" id="advanced-button" class="btn btn-default my-input-title" value="Advanced"/>
+          </span>
+          <input type="text" id="query" value="" class="form-control" placeholder="Type a song name"/>
+          <span class="input-group-btn">
+            <input type="submit" id="search" class="btn btn-primary" value="Search"/>
+          </span>
+        </div>
+        <div id="advanced-form" style="display:none">
+          <div class="input-group">
+            <span class="input-group-addon my-input-title" id="basic-addon3">Artist</span>
+            <input type="text" id="artist-query" value="" class="form-control" placeholder="Type the artist name"/>
+          </div>
+          <div class="input-group">
+            <span class="input-group-addon my-input-title" id="basic-addon3">Album</span>
+            <input type="text" id="album-query" value="" class="form-control" placeholder="Type the album name"/>
+          </div>
+          <div class="input-group">
+            <span class="input-group-addon my-input-title" id="basic-addon3">Genre</span>
+            <input type="text" id="genre-query" value="" class="form-control" placeholder="Type the genre"/>
+          </div>
+          <div class="input-group">
+            <span class="input-group-addon my-input-title" id="basic-addon3">Year</span>
+            <input type="text" id="year-query" value="" class="form-control" placeholder="Type the year"/>
           </div>
         </div>
       </form>
     </div>
-  </section>
+    <div id="results" class="row"></div>
+    <nav>
+      <ul id="pager" class="pager btn-lg">
+        <li id="prevPage" style="display:none"><a href="#">Previous</a></li>
+        <li id="nextPage" style="display:none"><a href="#">Next</a></li>
+      </ul>
+    </nav>
+  </div>
+</body>
 
-
-</div>
-<script src="functions.js"></script>
 </html>
